Crracion de System Grid

--- a/src/scss/config/_colors.scss
+++ b/src/scss/config/_colors.scss
@@ -13,8 +13,10 @@ $brown:  		#362222;
 $maroon: 		#461111;
 $navy: 			#1A1A40;
 
-$dark: 			#191919;
+$dark: 			#181818;
 $black: 		#000000;
 $white:  		#ffffff;
-$gray: 			#D8E3E7;
+$gray: 		    #f0f0f0;
 $gray-light: 	#F7F7F7;
+
+
