--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,7 +1,7 @@
-// @import 'config/colors';
-// @import 'config/global';
-// @use 'components/grid';
-h1 {
-	color: hotpink;
-	font-family: cursive;
-  }
+
+@import 'config/colors';
+@import 'config/variables';
+@import 'config/global';
+@import 'mixins/grid';
+@import 'components/grid';
+
