--- a/src/scss/components/_grid.scss
+++ b/src/scss/components/_grid.scss
@@ -21,9 +21,41 @@
 
 @include colsGenerator($breakpoints, $numberCols, 'col');
 
- // Single container class with breakpoint max-widths
- .container,
- // 100% wide container at all breakpoints
- .container-fluid {
-   @include make-container();
- }
+@if $enable-grid-classes {
+	// Single container class with breakpoint max-widths
+	.container,
+	// 100% wide container at all breakpoints
+	.container-fluid {
+	  @include make-container();
+	}
+	  // Responsive containers that are 100% wide until a breakpoint
+	  @each $breakpoint, $container-max-width in $container-max-widths {
+		.container-#{$breakpoint} {
+		  @extend .container-fluid;
+		}
+	
+		@include respond-up($breakpoint, $breakpoints) {
+		  %responsive-container-#{$breakpoint} {
+			max-width: $container-max-width;
+		  }
+	
+		  // Extend each breakpoint which is smaller or equal to the current breakpoint
+		  $extend-breakpoint: true;
+	
+		  @each $name, $width in $breakpoints {
+			@if ($extend-breakpoint) {
+			  .container#{breakpoint-infix($name, $breakpoints)} {
+				@extend %responsive-container-#{$breakpoint};
+			  }
+	
+			  // Once the current breakpoint is reached, stop extending
+			  @if ($breakpoint == $name) {
+				$extend-breakpoint: false;
+			  }
+			}
+		  }
+		}
+	  }
+}
+
+
