--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,7 +1,7 @@
 
-@import 'config/colors';
 @import 'config/variables';
-@import 'config/global';
+@import 'config/colors';
 @import 'mixins/grid';
+@import 'mixins/breakpoint';
+@import 'config/global';
 @import 'components/grid';
-
