--- a/src/scss/utilities/_utilities.scss
+++ b/src/scss/utilities/_utilities.scss
@@ -2,7 +2,7 @@
 UTILITIES
 */
 @import 'headlines';
-@import 'sub-titles';
+@import 'subtitles';
 @import 'texts';
 @import 'backgrounds';
 @import 'text-colors';
