--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -4,9 +4,8 @@
 // * Text
 
 $font: 				'Montserrat', sans-serif;
-// $font: 				'Roboto', sans-serif;
-$headlines: 		"1" 3.052rem 700 2rem, "2" 2.441rem 700 1.8rem, "3" 1.953rem 600 1.7rem, "4" 1.563rem 600 1.6rem, "5" 1.25rem 600 1.5rem, "6" 1rem 600 1.4rem;
-$sub-titles: 		"1" 2.125rem 500 , "2" 1.5rem 500, "3" 1.25rem 500, "4" 1rem 400;
+$headlines: 		"1" 3.815rem 700 2rem, "2" 3.052rem 700 1.8rem, "3" 2.441rem 600 1.7rem, "4" 1.953rem 600 1.6rem, "5" 1.563rem 600 1.5rem, "6" 1.25rem 600 1.4rem;
+$subtitles: 		"1" 1.125rem 600 , "2" 1.125rem 500;
 $texts: 			"text-1" 1.125rem 400, "text-2" 1rem 400, "caption" 0.875rem 400, "overline" 0.75rem 400;
 $text-align: 		left, right,  justify, center;
 $font-styles: 		normal,italic, oblique;
